// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ChildNavigation should render, lots 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/taxonomy/2"
        title="primate metagenome, taxon ID 2"
        translate="no"
      >
        primate metagenome
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/3"
        title="Primate calicivirus, taxon ID 3"
        translate="no"
      >
        Primate calicivirus
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/4"
        title="primate metagenome, taxon ID 4"
        translate="no"
      >
        primate metagenome
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/5"
        title="Primate calicivirus, taxon ID 5"
        translate="no"
      >
        Primate calicivirus
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/6"
        title="primate metagenome, taxon ID 6"
        translate="no"
      >
        primate metagenome
      </a>
    </li>
    <li>
      <a
        class="button tertiary no-margin"
        href="/taxonomy?query=parent:9606"
      >
        Browse all direct children (10)
      </a>
    </li>
    <li>
      <a
        class="button tertiary"
        href="/taxonomy?query=ancestor:9606"
      >
        Browse all descendants
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ChildNavigation should render, one 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/taxonomy/1441288"
        title="primate metagenome, taxon ID 1441288"
        translate="no"
      >
        primate metagenome
      </a>
    </li>
    <li>
      <a
        class="button tertiary no-margin"
        href="/taxonomy?query=parent:9606"
      >
        Browse all direct children (1)
      </a>
    </li>
    <li>
      <a
        class="button tertiary"
        href="/taxonomy?query=ancestor:9606"
      >
        Browse all descendants
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
